mise en place des informations restaurant avec notation et avis

--- a/index.html
+++ b/index.html
@@ -52,11 +52,13 @@
           <button class="filterButton btn btn-secondary" type="button">FILTRER</button>
         </div>
         <!--filtre end-->
+        <hr/>
+
 
         <!--liste restaurants start-->
         <div id="restaurants"></div>
 
-                <hr/>
+        <hr/>
 
             <!-- Side Modal Top Right -->            
             <div class="modal fade right" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
@@ -71,13 +73,13 @@
                     <span aria-hidden="true">&times;</span>
                   </button>                  
                 </div>
-                <img id="myModalImg" src="" 
-                  alt="Photo">
+                <div><img id="myModalImg" src="" alt="Photo" style="width: 60%;"></div>
                 <div class="modal-body" id="myModalBody">
-                  ...
+                  
                 </div>
                 <div class="modal-footer">
-                  <button type="button" class="btn btn-dark" data-dismiss="modal">Fermer</button>                  
+                  <button type="button" class="btn btn-dark" data-dismiss="modal">Fermer</button>
+                  <button type="button" class="btn btn-info">Donner un avis</button>
                 </div>
               </div>
             </div>
@@ -99,6 +101,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <!--<script type="text/javascript" src="js/jQuery.js"></script>-->
+    <script type="text/javascript" src="js/ajax.js"></script>
     <script type="text/javascript" src="js/map.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCA5arXTDsp5lB6iANmio2i9EER5jo6msM&libraries=places&callback=initMap"></script>
     <script type="text/javascript" src="js/restaurant.js"></script>
