--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <!--<script type="text/javascript" src="js/jQuery.js"></script>-->
     <script type="text/javascript" src="js/ajax.js"></script>
     <script type="text/javascript" src="js/map.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCA5arXTDsp5lB6iANmio2i9EER5jo6msM&libraries=places&callback=initMap"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=APIKEY&libraries=places&callback=initMap"></script>
     <script type="text/javascript" src="js/restaurant.js"></script>
     <!--Javascript end-->
 
