--- a/index.html
+++ b/index.html
@@ -46,13 +46,10 @@
           <br/><small> * Indiquez le nom du restaurant à ajouter <br/> puis cliquez sur la carte pour définir son emplacement</small>
         </form>
 
-        <hr/>
       <!--filtre slider end-->
 
         <!--liste restaurants start-->
-        <div id="restaurants"></div>
-
-        <hr/>
+        <div class="border border-warning shadow-sm p-3 mb-5 bg-white rounded" id="restaurants"></div>
 
             <!-- Side Modal start-->            
             <div class="modal fade right" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
