--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
           <input type="text" id="ratingRange" readonly style="border:0; color:#f6931f; font-weight:bold;"/>
         </p>
         <div id="slider-range"></div>
-        <div>
         <!--filtre slider end-->
 
         <!--Zone add restaurant Start-->
-          <button type="button" class="myButton"> 
-            <a id="btn_ajout_restau" class="waves-effect waves-light btn text-align-center"><i class="fas fa-plus"> </i>AJOUTEZ UN RESTAURANT</a>
+        <div class="text-align-center">
+          <button type="button" class="myButton text-align-center">
+            <a id="btn_ajout_restau" class="waves-effect waves-light btn text-align-center"><i class="fas fa-plus"> </i> AJOUTEZ UN RESTAURANT</a>
           </button>
           <form id="form_Addrestau" style="display: none; margin-top: 10px; margin-bottom: 10px;" class="text-center">
             <input id="ipt_name_restau" type="text" placeholder="Nom du restaurant" required>
-            <br/><small> * Indiquez le nom du restaurant à ajouter <br/> puis cliquez sur la carte pour définir son emplacement</small>
+            <br/><small> * Indiquez le nom du restaurant à ajouter <br/> puis faites un click droit sur la carte pour définir son emplacement</small>
           </form>
         </div>
         <!--Zone add restaurant End-->
@@ -48,14 +48,14 @@
         <!--liste restaurants start-->
         <div class="border border-warning shadow-sm p-3 mb-5 bg-white rounded" id="restaurants"></div>
 
-          <!-- Side Modal Reviews start-->            
+          <!-- Side Modal Reviews start-->
           <div class="modal fade right" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
               <div class="modal-content">
                 <div class="modal-header">
                   <h4 class="modal-title w-100" id="myModalLabel">Modal title</h4>
                   <button type="button" class="btn btn-info" id="addRating">Donner un avis</button>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>                  
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 </div>
                 <div><img id="myModalImg" src="" alt="Photo" style="width: 60%;"></div>
                 <div class="modal-body" id="myModalBody"></div>
@@ -67,7 +67,7 @@
           </div>
           <!-- Side Modal Reviews end -->
 
-          <!-- Side Modal Add Ratings start-->            
+          <!-- Side Modal Add Ratings start-->
           <div class="modal fade right" id="myModalAddRating" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialogue-right" role="document">
               <div class="modal-content">
@@ -75,9 +75,10 @@
                   <h4 class="modal-title w-100" id="myModalLabelAddRating">Modal title</h4>
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
-                  </button>                  
+                  </button>
                 </div>
-                <div class="modal-body" id="myModalBodyAddRating"></div>
+                <div class="modal-body" id="myModalBodyAddRating">
+              </div>
               </div>
             </div>
           </div>
@@ -92,17 +93,20 @@
     </div>
   </div>
 
-  <!--Javascript start-->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  <script type="text/javascript" src="js/ajax.js"></script>
-  <script type="text/javascript" src="js/map.js"></script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=APIKEY&libraries=places&callback=initMap"></script>
-  <script async defer type="text/javascript" src="js/restaurant.js"></script>
-  <!--Javascript end-->
+    <!--Javascript start-->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="js/ajax.js"></script>
+    <script type="text/javascript" src="js/map.js"></script>
+    <script type="text/javascript" src="js/restaurant.js"></script>
+    <script type="text/javascript" src="js/restaurantList.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCA5arXTDsp5lB6iANmio2i9EER5jo6msM&libraries=places&callback=initMap"></script>
+    <script type="text/javascript" src="js/util.js"></script>
+    <!--Javascript end-->
 
 </body>
 </html>
